--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "^3.70.0",
-    "@payloadcms/next": "^3.70.0",
-    "@payloadcms/richtext-lexical": "^3.70.0",
+    "@payloadcms/db-mongodb": "3.68.0",
+    "@payloadcms/next": "3.68.0",
+    "@payloadcms/richtext-lexical": "3.68.0",
     "graphql": "^16.12.0",
-    "next": "14.2.15",
-    "payload": "3.68",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.1.3",
+    "payload": "3.68.0",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.1.3",
     "typescript": "^5"
   }
 }
